--- a/README
+++ b/README
@@ -7,11 +7,8 @@ DESCRIPTION
 
     This module defines a standard *simplified* interface to the dynamic
     linking mechanisms available on many platforms. Its primary purpose is
-    to implement cheap automatic dynamic loading of Perl modules.
-
-    For a more complicated interface, see DynaLoader. Many (most) features
-    of DynaLoader are not implemented in XSLoader, like for example the
-    dl_load_flags, not honored by XSLoader.
+    to implement cheap automatic dynamic loading of Perl modules.  For a 
+    more complicated interface, see DynaLoader. 
 
 
 INSTALLATION
@@ -29,11 +26,11 @@ INSTALLATION
     This release of XSLoader has been tested by the author on the following 
     systems: 
 
-      - Perl 5.4.76 i686-linux (custom build)
-      - Perl 5.5.670 i686-linux (custom build)
+      - Perl 5.4.5 i686-linux (custom build)
+      - Perl 5.5.3 i686-linux (custom build)
       - Perl 5.6.2 i686-linux (custom build)
       - Perl 5.8.5 i386-linux-thread-multi (vendor build)
-      - Perl blead@25582 i686-linux (custom build)
+      - Perl blead@25763 i686-linux (custom build)
       - Perl 5.6.0 darwin (vendor build)
       - Perl 5.6.2 darwin (custom build)
       - Perl 5.8.6 cygwin (vendor build)
@@ -42,12 +39,11 @@ INSTALLATION
         http://testers.cpan.org/show/XSLoader.html
 
 
-AUTHOR
+AUTHORS
 
     Ilya Zakharevich originally extracted XSLoader from DynaLoader.
 
     CPAN version is currently maintained by Sébastien Aperghis-Tramoni
     <sebastien@aperghis.net>
 
-    Previous maintainer was Michael G Schwern <schwern@pobox.com>
-
+    Previous maintainer was Michael G. Schwern <schwern@pobox.com>
